--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -175,6 +175,8 @@
         </div>
       </div>
     </header>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
