--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,25 @@
 
   <body>
     <header>
+      <div class="flex px-4 py-4 justify-between items-center text-white bg-gradient-to-tr from-indigo-200 via-purple-100 via-purple-200 to-red-200">
+        <div>
+          <h1 class="text-lg">Frontend Mentor</h1>
+          <h2 class="text-xs">Freedback Board</h1>
+        </div>
+        <div>
+
+        <svg class="h-6 w-6" viewBox="0 0 20 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <rect width="20" height="3" fill="white"/>
+          <rect y="7" width="20" height="3" fill="white"/>
+          <rect y="14" width="20" height="3" fill="white"/>
+        </svg>
+
+          <svg class="hidden h-6 w-6 border-2 border-red" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M8.99989 6.37857L2.98948 0.368164L0.868164 2.48948L6.87857 8.49989L0.868164 14.5103L2.98948 16.6316L8.99989 10.6212L15.0103 16.6316L17.1316 14.5103L11.1212 8.49989L17.1316 2.48948L15.0103 0.368164L8.99989 6.37857Z" fill="white"/>
+          </svg>
+        </div>
+      </div>
+
       <div class="flex justify-between text-gray-100 bg-indigo-300 px-4 py-2">
         <div class="flex sm:space-x-8">
           <div class="items-center space-x-2 hidden sm:flex">
