Fix: offcanvas header hidden on small

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -118,7 +118,7 @@
             </div>
           </div>
           <div class="w-full h-screen relative  bg-gray-100">
-            <div class="sidebar w-72 p-8 absolute inset-y-0 right-0 transform translate-x-full sm:translate-x-full md:hidden transition duration-200 ease-in-out">
+            <div class="sidebar w-72 p-8 absolute inset-y-0 right-0 transform translate-x-full sm:translate-x-full sm:hidden transition duration-200 ease-in-out">
               <!-- mobile nav -->
               <nav class="flex flex-col">
                 <div class="flex-1 lg:flex-initial sm:flex sm:flex-wrap items-center space-x-2 x-4 py-5 rounded-lg pl-2 text-xs bg-white">
