--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -156,8 +156,38 @@
             </nav>
           </div>
 
-          <div class="h-screen w-full text-white bg-red-800">
-            content
+          <div class="h-screen w-full bg-gray-100">
+            <% @results.feedbacks.each do |feedback| %>
+              <div class="mt-4 flex flex-wrap sm:flex-nowrap justify-between mx-6 p-6 bg-white rounded-xl">
+               <div class="flex-grow w-full mb-4 sm:ml-10">
+                  <h3 class="font-bold"><%= feedback.title.capitalize %></h3>
+                  <div class="mt-2 text-gray-300">
+                    <%= feedback.description%>
+                  </div>
+                  <div class="mt-2">
+                  <span class="inline-flex items-center px-4 py-2 rounded-xl text-xs font-semibold bg-gray-100 text-indigo-200">
+                    <%= Feedback.human_enum_name(:category, feedback.category) %>
+                  </span>
+                  </div>
+                </div>
+                <div class="sm:order-first px-4 py-1.5 flex items-center sm:flex-col justify-center   sm:my-8 bg-gray-100 rounded-xl">
+                  <svg class="h-2 w-2" viewBox="0 0 9 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0 6L4 2L8 6" stroke="#4661E6" stroke-width="2"/>
+                  </svg>
+
+                  <div class="ml-2.5 sm:ml-0 sm:mt-2 text-indigo-400"><%= feedback.upvotes %></div>
+                </div>
+                <div class="sm:order-last flex items-center">
+                  <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M2.62074 16H1.34534L2.24718 15.0895C2.73344 14.5986 3.0371 13.9601 3.11873 13.2674C1.03637 11.8878 0 9.88917 0 7.79388C0 3.92832 3.51913 0 9.0305 0C14.8692 0 18 3.61479 18 7.45522C18 11.321 14.8361 14.9333 9.0305 14.9333C8.0135 14.9333 6.95226 14.7963 6.00478 14.5448C5.10787 15.4735 3.89262 16 2.62074 16Z" fill="#CDD2EE"/>
+                  </svg>
+                  <span class="ml-2 text-xs">
+                    6
+                  </span>
+                </div>
+              </div>
+            <% end %>
+
           </div>
         </div>
       </div>
