--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -1,1 +1,63 @@
- <h1 class="text-xl font-bold">Create New Feedback</h1>
+<nav class="flex mx-auto px-2 max-w-2xl m-6">
+  <div>
+    <%= link_to root_path, class: "flex items-center" do %>
+      <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M4.33447 9L0.334473 5L4.33447 1" stroke="#4661E6" stroke-width="2"/>
+      </svg>
+      <span class="ml-2">Go Back</span>
+    <% end %>
+  </div>
+</nav>
+<%= form_with model: @feedback, html: { class: "mt-10 relative mx-auto px-6 max-w-2xl w-full  bg-white rounded-xl border" } do |form| %>
+<div class="mt-11">
+  <div class="absolute -top-5 p-3 items-center justify-center text-white bg-gradient-to-tr from-indigo-200 via-purple-100 via-purple-200 to-red-200 rounded-full">
+    <svg class="w-3 h-3" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M7.67317 11.7142V7.54689H11.7353V4.47402H7.67317V0.285645H4.38983V4.47402H0.285645V7.54689H4.38983V11.7142H7.67317Z" fill="white"/>
+    </svg>
+  </div>
+  <h1 class="text-xl font-bold">Create New Feedback</h1>
+
+  <div class="mt-6 text-sm">
+    <div>
+      <%= form.label :title, "Feedback Title", class: "text-indigo-400 font-bold" %>
+      <p class="text-gray-300">Add a short, descriptive headline</p>
+    </div>
+
+    <div class="mt-4">
+      <%= form.text_field :title, class: "w-full text-indigo-400 bg-gray-100 border-none focus:border-indigo-200" %>
+      <p class='text-red-200'><%= show_errors(@feedback, :title) %></p>
+    </div>
+  </div>
+
+  <div class="mt-6">
+    <div class="text-sm">
+      <%= form.label :category, class: "text-indigo-400 font-bold" %>
+      <p class="text-gray-300">Choose a category for your feedback</p>
+    </div>
+    <div class="mt-4">
+       <%= form.select(:category, options_for_enum(@feedback, :category), {}, { class: "w-full h-12 text-indigo-400 bg-gray-100 border-none focus:border-indigo-200"}) %>
+      <p class='text-red-200'><%= show_errors(@feedback, :category) %></p>
+    </div>
+  </div>
+
+  <div class="mt-6 text-sm">
+    <div>
+      <%= form.label :description, "Feedback Detail", class: "text-indigo-400 font-bold" %>
+      <p class="text-gray-300">Include any specific comments on what should be improved, added, etc.</p>
+    </div>
+    <div class="mt-4">
+      <%= form.text_area :description, class: "w-full h-32 text-indigo-400 bg-gray-100 border-none" %>
+      <p class="text-red-200"><%= show_errors(@feedback, :description) %></p>
+    </div>
+  </div>
+
+  <div class="mt-10 mb-4 flex flex-col sm:flex-row sm:justify-end inline-block">
+    <%= form.submit "Add Feedback", class:  "w-full inline-flex items-center px-4 sm:px-6 py-3 sm:w-auto sm:ml-3 sm:order-2 border border-transparent shadow-sm text-xs sm:text-sm font-bold rounded-lg text-white bg-purple-200 hover:bg-purple-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-indigo-500" %>
+    <%= link_to feedbacks_path, class: "mt-4 sm:mt-0 w-full sm:w-auto justify-center inline-flex items-center px-4 sm:px-6 py-3 border border-transparent shadow-sm text-xs sm:text-sm font-bold rounded-lg text-white bg-indigo-400 hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-gray-300" do %>
+      </svg>
+      <span class="font-bold">Cancel</span>
+    <% end %>
+  </div>
+
+</div>
+<% end %>
