Fet: Feedback#create for staff

--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -40,6 +40,19 @@
     </div>
   </div>
 
+  <% if current_user.staff_role? %>
+    <div class="mt-6">
+      <div class="text-sm">
+        <%= form.label :status, class: "text-indigo-400 font-bold" %>
+        <p class="text-gray-300">Change feature state</p>
+      </div>
+      <div class="mt-4">
+        <%= form.select(:status, options_for_enum(@feedback, :status), {}, { class: "w-full h-12 text-indigo-400 bg-gray-100 border-none focus:border-indigo-200"}) %>
+        <p class='text-red-200'><%= show_errors(@feedback, :status) %></p>
+      </div>
+    </div>
+  <% end %>
+
   <div class="mt-6 text-sm">
     <div>
       <%= form.label :description, "Feedback Detail", class: "text-indigo-400 font-bold" %>
