--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -8,9 +8,7 @@
     <% end %>
   </div>
   <div>
-    <button type="button" class="relative inline-flex items-center px-4 py-2 border border-transparent shadow-sm text-xs font-medium rounded-lg text-white bg-indigo-200 hover:bg-purple-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-indigo-500">
-      <span class="font-bold">Edit Feedback</span>
-    </button>
+    <%= render(EditFeedbackLinkComponent.new(feedback: @feedback, current_user: current_user)) %>
   </div>
 </nav>
 
