--- a/app/views/feedbacks/edit.html.erb
+++ b/app/views/feedbacks/edit.html.erb
@@ -25,7 +25,7 @@
       </svg>
       <span class="font-bold">Cancel</span>
     <% end %>
-    <%= link_to "Delete", "#", class:  "mt-4 sm:mt-0 w-full inline-flex items-center justify-center px-4 sm:px-6 py-3 sm:w-auto sm:mr-auto sm:order-first border border-transparent shadow-sm text-xs sm:text-sm font-bold rounded-lg text-white bg-red-200 hover:bg-red-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-indigo-500" %>
+    <%= link_to "Destroy", @feedback, class:  "mt-4 sm:mt-0 w-full inline-flex items-center justify-center px-4 sm:px-6 py-3 sm:w-auto sm:mr-auto sm:order-first border border-transparent shadow-sm text-xs sm:text-sm font-bold rounded-lg text-white bg-red-200 hover:bg-red-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-indigo-500", method: :delete  %>
   </div>
 
 </div>
