--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -15,7 +15,7 @@
 <div class="mt-10 relative mx-auto px-6 max-w-3xl w-full  bg-white rounded-xl border">
   <%= render(FeedbackViewComponent.new(feedback: @feedback)) %>
   <div class="mt-20 mx-6 mb-6 bg-white rounded-xl">
-    <h3 class="pt-6 ml-6 text-xl font-bold"><span>4</span> Comments</h3>
+    <h3 class="pt-6 ml-6 text-xl font-bold"><span><%= @feedback.comments_count %></span> Comments</h3>
 
     <div class="mt-6 px-6 py-8"> <!-- comments wrapper -->
 
