--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -17,7 +17,7 @@
   <div class="mt-20 mx-6 mb-6 bg-white rounded-xl">
     <h3 class="pt-6 ml-6 text-xl font-bold"><span>4</span> Comments</h3>
 
-    <div class="mt-6 px-6 py-8"> <!-- comments wrapper >
+    <div class="mt-6 px-6 py-8"> <!-- comments wrapper -->
 
       <!-- comment begin -->
       <div id="comment-1" class="">  <!-- relative my-5 mx-auto -->
