--- a/app/components/new_comment_component.html.erb
+++ b/app/components/new_comment_component.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: [@commentable, Comment.new], html: { class: "mt-6 rounded-xl" } do |form|  %>
+<%= form_with model: [@commentable, Comment.new], html: { class: "#{@klass} mt-6 rounded-xl" } do |form|  %>
   <div class="mt-6 sm:col-span-6">
     <label for="about" class="block text-xl font-bold">
       Add Comment
@@ -8,6 +8,7 @@
     </div>
     <div class="mt-4 flex justify-between">
       <p class="mt-2 text-xs text-gray-300">250 characters left</p>
+      <%= form.hidden_field :parent_id, value: @parent_id %>
       <%= form.submit "Post Comment", class: "relative inline-flex items-center px-4 py-2 border border-transparent shadow-sm text-xs font-bold rounded-lg text-white bg-purple-200 hover:bg-purple-100 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-indigo-500" %>
     </div>
   </div>
