PART2 try UPDATE Main   WIP Fet: Suggestion#show comments

--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -55,7 +55,7 @@
       <hr>
 
       <!-- comment begin -->
-      <div id="comment-2" class="relative px-6 py-8">  <!-- relative my-5 mx-auto -->
+      <div id="comment-2" class="relative">  <!-- relative my-5 mx-auto -->
         <a href="#comment-2" class="comment-border-link">
           <span class="sr-only">Jump to comment-2</span>
         </a>
