--- a/app/components/comment_component.html.erb
+++ b/app/components/comment_component.html.erb
@@ -4,7 +4,7 @@
       <span class="sr-only">Jump to comment-<%= @comment.id %></span>
     <% end %>
   <% end %>
-  <div>
+  <div data-controller="reply">
     <!-- heading starts -->
     <div class="flex"> <!-- comment-heading items-center h-12 (50px)   -->
       <%= image_tag(@comment.user.avatar, class: "inline-block h-10 w-10 rounded-full") %>
@@ -15,7 +15,7 @@
       </div>
 
       <div class="">
-        <%= link_to "Reply", "#", class: "text-xs text-indigo-200" %>
+        <%= link_to "Reply", "#", class: "text-xs text-indigo-200", data: { action: "click->reply#toggle" } %>
       </div>
     </div>
     <!-- heading ends -->
@@ -27,10 +27,10 @@
 
     <!-- Reply Form Start -->
     <div class="ml-12 mt-8">
-      <%= render(NewCommentComponent.new(commentable: @comment.commentable, parent_id: @comment.id, klass: "hidden")) %>
+      <%= render(NewCommentComponent.new(commentable: @comment.commentable, parent_id: @comment.id, klass: "hidden", reply_target: "form")) %>
     </div>
+    <!-- Reply Form End -->
   </div>
-  <!-- Reply Form End -->
 
   <!-- replies start -->
   <div class="ml-12 mt-8">
