--- a/app/components/new_comment_component.html.erb
+++ b/app/components/new_comment_component.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: [@commentable, Comment.new], html: { class: "#{@klass} mt-6 rounded-xl" } do |form|  %>
+<%= form_with model: [@commentable, Comment.new], html: { class: "#{@klass} mt-6 rounded-xl", data: { "reply-target": @reply_target } } do |form|  %>
   <div class="mt-6 sm:col-span-6">
     <label for="about" class="block text-xl font-bold">
       Add Comment
