Active storage setup for S3

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,6 +19,14 @@
   </div>
 
   <div class="field">
+    <% if resource.avatar.attached? %>
+      <%= image_tag resource.avatar %>
+    <% end %>
+    <%= f.label :avatar %><br />
+    <%= f.file_field :avatar %>
+  </div>
+
+  <div class="field">
     <%= f.label :username%><br />
     <%= f.text_field :username, autocomplete: "username" %>
   </div>
