--- a/app/components/feedback_view_component.html.erb
+++ b/app/components/feedback_view_component.html.erb
@@ -10,13 +10,7 @@
     </span>
     </div>
   <% end %>
-  <div class="sm:order-first px-4 py-1.5 flex items-center sm:flex-col justify-center   sm:my-8 bg-gray-100 rounded-xl">
-    <svg class="h-2 w-2" viewBox="0 0 9 7" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M0 6L4 2L8 6" stroke="#4661E6" stroke-width="2"/>
-    </svg>
-
-    <div class="ml-2.5 sm:ml-0 sm:mt-2 text-indigo-400"><%= @feedback.upvotes_count %></div>
-  </div>
+  <%= render partial: "votes/vote", locals: { current_user: @current_user, feedback: @feedback } %>
   <%= link_to suggestion_path(@feedback), class: "sm:order-last flex items-center" do %>
     <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M2.62074 16H1.34534L2.24718 15.0895C2.73344 14.5986 3.0371 13.9601 3.11873 13.2674C1.03637 11.8878 0 9.88917 0 7.79388C0 3.92832 3.51913 0 9.0305 0C14.8692 0 18 3.61479 18 7.45522C18 11.321 14.8361 14.9333 9.0305 14.9333C8.0135 14.9333 6.95226 14.7963 6.00478 14.5448C5.10787 15.4735 3.89262 16 2.62074 16Z" fill="#CDD2EE"/>
