Add break_point parameter for votes/vote

--- a/app/views/votes/create.js.erb
+++ b/app/views/votes/create.js.erb
@@ -1,1 +1,1 @@
-document.getElementById("feedback-<%= @vote.feedback.id %>").innerHTML = "<%= j render 'votes/vote', feedback: @vote.feedback %>";
+document.getElementById("feedback-<%= @vote.feedback.id %>").innerHTML = "<%= j render 'votes/vote', feedback: @vote.feedback, break_point: @break_point %>";
