Fix: FeedbackViewComponent left+right margin only on mobile

--- a/app/components/feedback_view_component.html.erb
+++ b/app/components/feedback_view_component.html.erb
@@ -1,4 +1,4 @@
-<div class="mt-4 flex flex-wrap sm:flex-nowrap justify-between mx-6 p-6 bg-white rounded-xl test-feedback-view-component">
+<div class="mt-4 flex flex-wrap sm:flex-nowrap justify-between mx-6 sm:mx-0 p-6 bg-white rounded-xl test-feedback-view-component">
   <%= link_to feedback_path(@feedback), class:"flex-grow w-full mb-4 sm:ml-10 overflow-hidden" do %>
     <h3 class="font-bold sm:whitespace-nowrap overflow-hidden overflow-ellipsis"><%= @feedback.title.capitalize %></h3>
     <div class="mt-2 text-gray-300 sm:whitespace-nowrap overflow-hidden overflow-ellipsis">
