Stimulus add autogrow

--- a/app/components/new_comment_component.html.erb
+++ b/app/components/new_comment_component.html.erb
@@ -2,7 +2,11 @@
   <div class="mt-6 sm:col-span-6">
     <%= form.label :content, "Add Comment", class: "block text-xl font-bold" %>
     <div class="mt-1">
-      <%= form.text_area :content, rows: "4", class: "shadow-sm text-indigo-400 border-none focus:ring-indigo-200 focus:border-indigo-200 block w-full sm:text-base bg-gray-100 rounded-md", placeholder: "Type your comment here" %>
+      <%= form.text_area :content, rows: "4",
+                         class: "shadow-sm text-indigo-400 border-none focus:ring-indigo-200 focus:border-indigo-200 block w-full sm:text-base bg-gray-100 rounded-md",
+                         placeholder: "Type your comment here",
+                         data: { controller: "textarea-autogrow",
+                                 "textarea-autogrow-resize-debounce-delay-value": "500" } %>
     </div>
     <div class="mt-4 flex justify-between">
       <p class="mt-2 text-xs text-gray-300">250 characters left</p>
