--- a/app/views/votes/_vote.html.erb
+++ b/app/views/votes/_vote.html.erb
@@ -1,20 +1,34 @@
 <% break_point ||= 'sm' %>
 <div id="feedback-<%= feedback.id %>" class="flex <%= break_point %>:order-first text-xs">
-<% if current_user&.voted?(feedback_id: feedback.id)  %>
-  <%= link_to vote_path(current_user.vote(feedback_id: feedback.id), break_point: break_point), method: :delete, remote: true, class: "max-h-12 bg-indigo-200 text-white px-4 py-1.5 flex items-center #{break_point}:flex-col justify-center #{break_point}:my-8 hover:bg-indigo-50 hover:text-indigo-400 rounded-xl" do %>
-    <svg class="h-2 w-2" viewBox="0 0 9 7" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M0 6L4 2L8 6" stroke="white" stroke-width="2"/>
-    </svg>
+  <% if !current_user %>
 
-    <div class="ml-2.5 <%= break_point %>:ml-0 <% break_point %>:mt-2 "><%= feedback.upvotes_count %></div>
-  <% end %>
-<% else %>
-  <%= link_to votes_path(feedback: feedback, break_point: break_point), method: :post, remote: true, class: "max-h-12 bg-gray-100 text-indigo-200 px-4 py-1.5 flex items-center #{break_point}:flex-col justify-center #{break_point}:my-8 hover:bg-indigo-50 hover:text-indigo-400 rounded-xl" do %>
-    <svg class="h-2 w-2" viewBox="0 0 9 7" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M0 6L4 2L8 6" stroke="#4661E6" stroke-width="2"/>
-    </svg>
+    <%= link_to new_user_session_path, class: "max-h-14 bg-gray-100 text-indigo-200 px-4 py-1.5 flex items-center #{break_point}:flex-col justify-center #{break_point}:my-8 hover:bg-indigo-50 hover:text-indigo-400 rounded-xl" do %>
+      <svg class="h-2 w-2" viewBox="0 0 9 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M0 6L4 2L8 6" stroke="#4661E6" stroke-width="2"/>
+      </svg>
+      <div class="ml-2.5 <%= break_point %>:ml-0 <%= break_point %>:mt-2 "><%= feedback.upvotes_count %></div>
+    <% end %>
 
-    <div class="ml-2.5 <%= break_point %>:ml-0 <%= break_point %>:mt-2 "><%= feedback.upvotes_count %></div>
+  <% else %>
+
+    <% if current_user&.voted?(feedback_id: feedback.id)  %>
+
+      <%= link_to vote_path(current_user.vote(feedback_id: feedback.id), break_point: break_point), method: :delete, remote: true, class: "max-h-14 bg-indigo-200 text-white px-4 py-1.5 flex items-center #{break_point}:flex-col justify-center #{break_point}:my-8 hover:bg-indigo-50 hover:text-indigo-400 rounded-xl" do %>
+        <svg class="h-2 w-2" viewBox="0 0 9 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M0 6L4 2L8 6" stroke="white" stroke-width="2"/>
+        </svg>
+        <div class="ml-2.5 <%= break_point %>:ml-0 <%= break_point %>:mt-2 "><%= feedback.upvotes_count %></div>
+      <% end %>
+
+    <% else %>
+
+      <%= link_to votes_path(feedback: feedback, break_point: break_point), method: :post, remote: true, class: "max-h-14 bg-gray-100 text-indigo-200 px-4 py-1.5 flex items-center #{break_point}:flex-col justify-center #{break_point}:my-8 hover:bg-indigo-50 hover:text-indigo-400 rounded-xl" do %>
+        <svg class="h-2 w-2" viewBox="0 0 9 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M0 6L4 2L8 6" stroke="#4661E6" stroke-width="2"/>
+        </svg>
+        <div class="ml-2.5 <%= break_point %>:ml-0 <%= break_point %>:mt-2 "><%= feedback.upvotes_count %></div>
+      <% end %>
+
+    <% end %>
   <% end %>
-<% end %>
 </div>
