Fix: update mobile links

--- a/app/views/suggestions/_sidebar_mobile.html.erb
+++ b/app/views/suggestions/_sidebar_mobile.html.erb
@@ -21,7 +21,7 @@
           <section class="mt-6 flex-1 px-6 py-2 sm:flex sm:flex-col lg:flex-initial rounded-lg bg-white">
             <div class="flex justify-between">
               <h2 class="text-xl font-bold">Roadmap</h2>
-              <a class="text-indigo-200 underline">view</a>
+              <%= link_to "view", roadmaps_path, class: "ml-14 text-indigo-200 underline" %>
             </div>
 
             <ul class="mt-6 flex flex-col list-none  text-gray-300 text-left leading-8">
